<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal"
    tools:context=".MainActivity">
<ImageView
    android:id="@+id/company_logo"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo2"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/company_logo"/>
    <TextView
        android:id="@+id/sign_up"
        android:layout_below="@id/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"/>
    
    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:textColor="@android:color/white"
        android:hint="@string/enter_first_name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawableLeft="@drawable/ic_account_box_white" />
    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/sign_up"
        android:textColor="@android:color/white"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:layout_alignParentRight="true" />
    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:textColor="@android:color/white"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email_white"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email_white" />
    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableStart="@drawable/ic_date_white"
        android:textColor="@android:color/white"
        android:layout_below="@id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColorHint="@android:color/white"
        android:drawableLeft="@drawable/ic_date_white" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableStart="@drawable/ic_phone_white"
        android:textColor="@android:color/white"
        android:layout_below="@id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_phone_white" />
    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_below="@id/birthday"
        android:layout_toEndOf="@id/phone"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_toRightOf="@id/phone" />
<EditText
    android:id="@+id/password"
    android:layout_below="@id/phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/enter_password"
    android:drawableStart="@drawable/ic_lock_white"
    android:inputType="textPassword"
    android:textColorHint="@android:color/white"
    android:textColor="@android:color/white"
    android:drawableLeft="@drawable/ic_lock_white" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_below="@id/phone"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true" />
<CheckBox
    android:id="@+id/conditions"
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password"
    android:text="@string/accept_terms_and_conditions"
    android:checked="true"
    android:layout_centerHorizontal="true"
    android:textColor="@android:color/white"
    android:onClick="showToast"/>
    <Button
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:onClick="createAccount"/>




</RelativeLayout>